# ctx-portal

./: .gitignore  README.md  docker-compose.yml  init.sql  package-lock.json  package.json  pnpm-lock.yaml  shim.d.ts  tsup.config.ts  unocss.config.ts  vite.config.content.ts  vite.config.ts
native-app/: README.md  app.js  app.py  browser.py  dev.mrwk.ctx_portal.json  echo.py  failed_points.csv  pyproject.toml
native-app/ctx_portal_native/: app.py  browser.py  dependency.py
native-app/ctx_portal_native/handlers/: search.py  user_activity.py
native-app/ctx_portal_native/models/: document_open_context.py  history.py
native-app/ctx_portal_native/pkg/: ocr.py  sbert.py  supabase.py
native-app/ctx_portal_native/pkg/sbert/: model.py
native-app/ctx_portal_native/pkg/util/: dummy_data.py
native-app/ctx_portal_native/pkg/value_object/: browse_history.py
native-app/ctx_portal_native/repositories/: document.py  document_context_vector.py  document_open_context_vectors.py  histories.py  posgresql.py  qdrant.py
native-app/ctx_portal_native/usecases/: search_document.py
native-app/ctx_portal_native/value_object/: browse_history.py  browse_paragraph_log.py  searched_document.py
native-app/dummy/: out.txt
src/: manifest.ts  variables.ts
src/background/: index.ts  main.ts  supabase.js
src/components/container/: search-modal.vue
src/composables/: useBroseParagraphLog.ts  useStorageLocal.ts
src/contentScripts/: index.ts
src/logic/: activity-logger.ts  context-logger.ts  index.ts  message.ts
src/options/: Options.vue  main.ts
src/popup/: Popup.vue
(+17 files in other folders)
