[tool.poetry]
name = "ctx-portal-native"
version = "0.1.0"
description = "ctx-portal python app"
authors = ["murawakimitsuhiro <mitsuhiromurawaki@gmail.com>"]
readme = "README.md"
packages = [{include = "ctx_portal_native"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
